[gd_scene load_steps=30 format=3 uid="uid://bgagrax4a664b"]

[ext_resource type="Script" path="res://menu.gd" id="1_gonyr"]
[ext_resource type="Texture2D" uid="uid://dqkpj4s1xmqbm" path="res://Sprites/UI/msg_logo_stars.png" id="2_76fe1"]
[ext_resource type="Texture2D" uid="uid://b2vh4a6egxl3l" path="res://Sprites/UI/msg_logo_red_line.png" id="2_y1gc2"]
[ext_resource type="Texture2D" uid="uid://tm337ydf6pg1" path="res://Sprites/UI/msg_logo_orange_line.png" id="3_3h343"]
[ext_resource type="Texture2D" uid="uid://b61m3xfogeyrp" path="res://Sprites/UI/msg_start_default.png" id="3_s47mq"]
[ext_resource type="Texture2D" uid="uid://otwp03ucxie4" path="res://Sprites/UI/msg_start_pressed.png" id="4_3enfj"]
[ext_resource type="Texture2D" uid="uid://cyiqskb41ykm3" path="res://Sprites/UI/msg_logo_yellow_line.png" id="4_ynelm"]
[ext_resource type="Texture2D" uid="uid://b0t0h7gmtkjsf" path="res://Sprites/UI/msg_quit_default.png" id="5_3feox"]
[ext_resource type="Texture2D" uid="uid://prp8k0bj4b26" path="res://Sprites/UI/msg_logo_blue_line.png" id="5_en3hd"]
[ext_resource type="Texture2D" uid="uid://dng1jp1y3lbop" path="res://Sprites/UI/msg_quit_pressed.png" id="6_ct1ws"]
[ext_resource type="Texture2D" uid="uid://ckqwyfhmqd87q" path="res://Sprites/UI/msg_logo_outline.png" id="6_lsda6"]
[ext_resource type="Texture2D" uid="uid://chdmci3lt2hn6" path="res://Sprites/UI/msg_white_circle.png" id="7_c8ya6"]
[ext_resource type="Texture2D" uid="uid://c61l1qmas444d" path="res://Sprites/UI/msg_settings_default.png" id="7_f0ogo"]
[ext_resource type="Texture2D" uid="uid://bgblkxh8p1v8g" path="res://Sprites/UI/msg_settings_pressed.png" id="8_l8o2m"]
[ext_resource type="Texture2D" uid="uid://b5chyralboimt" path="res://Sprites/hit_sheet.png" id="15_3bmx6"]
[ext_resource type="AudioStream" uid="uid://ridc5s7enr8m" path="res://Audio/Menu_Button_Hover_Sound_01-001.wav" id="17_b3d28"]
[ext_resource type="AudioStream" uid="uid://c1p6gcf35i6x" path="res://Audio/Menu Button_Click_Sound_01-001.wav" id="17_hcmy5"]
[ext_resource type="AudioStream" uid="uid://c0v4ycok8iise" path="res://Audio/Menu_Button_Hover_Sound_02-001.wav" id="18_onc4y"]
[ext_resource type="AudioStream" uid="uid://dpbbjl3d24u2m" path="res://Audio/Menu_Button_Hover_Sound_03-001.wav" id="19_22thf"]
[ext_resource type="AudioStream" uid="uid://bkucwmcrduhsv" path="res://Audio/Menu_Button_Hover_Sound_04-001.wav" id="20_6awja"]
[ext_resource type="Script" path="res://vol_slider.gd" id="22_wpuw8"]
[ext_resource type="AudioStream" uid="uid://bwqxnwcfvnn8h" path="res://Audio/Rising Star.wav" id="23_0m40p"]
[ext_resource type="Script" path="res://OptionButton.gd" id="23_1k4qg"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_x7167"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vp1jl"]

[sub_resource type="Animation" id="Animation_pi5o5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sparkle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sparkle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_71t2i"]
resource_name = "sparkle"
length = 0.23
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sparkle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.054304, 0.100577, 0.142366, 0.180716),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sparkle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.218755),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.223633),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_sparkle_timer"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rewuj"]
_data = {
"RESET": SubResource("Animation_pi5o5"),
"sparkle": SubResource("Animation_71t2i")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rkdem"]
streams_count = 4
stream_0/stream = ExtResource("17_b3d28")
stream_0/weight = 1.0
stream_1/stream = ExtResource("18_onc4y")
stream_1/weight = 1.0
stream_2/stream = ExtResource("19_22thf")
stream_2/weight = 1.0
stream_3/stream = ExtResource("20_6awja")
stream_3/weight = 1.0

[node name="Menu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gonyr")

[node name="main_menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BG" type="ColorRect" parent="main_menu"]
light_mask = 0
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.160784, 0.145098, 0.188235, 1)

[node name="Stars" type="TextureRect" parent="main_menu"]
layout_mode = 0
offset_left = 584.0
offset_right = 1197.0
offset_bottom = 1078.0
texture = ExtResource("2_76fe1")

[node name="Stars2" type="TextureRect" parent="main_menu"]
layout_mode = 0
offset_left = 1304.0
offset_right = 1917.0
offset_bottom = 1078.0
texture = ExtResource("2_76fe1")

[node name="Stars3" type="TextureRect" parent="main_menu"]
layout_mode = 0
offset_left = -5.0
offset_right = 608.0
offset_bottom = 1078.0
texture = ExtResource("2_76fe1")

[node name="RedLine" type="TextureRect" parent="main_menu"]
material = SubResource("CanvasItemMaterial_x7167")
layout_mode = 0
offset_left = 663.0
offset_right = 1372.0
offset_bottom = 1080.0
texture = ExtResource("2_y1gc2")
stretch_mode = 4

[node name="OrangeLine" type="TextureRect" parent="main_menu"]
layout_mode = 0
offset_left = 639.0
offset_right = 1348.0
offset_bottom = 1080.0
texture = ExtResource("3_3h343")
stretch_mode = 4

[node name="YellowLine" type="TextureRect" parent="main_menu"]
layout_mode = 0
offset_left = 615.0
offset_right = 1324.0
offset_bottom = 1080.0
texture = ExtResource("4_ynelm")
stretch_mode = 4

[node name="BlueLine" type="TextureRect" parent="main_menu"]
material = SubResource("CanvasItemMaterial_vp1jl")
layout_mode = 0
offset_left = 591.0
offset_right = 1300.0
offset_bottom = 1080.0
texture = ExtResource("5_en3hd")
stretch_mode = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="main_menu"]
light_mask = 0
layout_mode = 2
offset_left = 536.0
offset_right = 929.0
offset_bottom = 539.0
scale = Vector2(2, 2)
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="main_menu/VBoxContainer2"]
light_mask = 0
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="main_menu/VBoxContainer2/MarginContainer2"]
light_mask = 0
layout_mode = 2
vertical = true

[node name="TextureRect" type="TextureRect" parent="main_menu/VBoxContainer2/MarginContainer2/BoxContainer"]
light_mask = 0
texture_filter = 1
layout_mode = 2
texture = ExtResource("6_lsda6")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="main_menu/VBoxContainer2"]
light_mask = 0
layout_mode = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="BoxContainer" type="BoxContainer" parent="main_menu/VBoxContainer2/MarginContainer"]
light_mask = 0
layout_mode = 2
vertical = true

[node name="TextureRect" type="TextureRect" parent="main_menu/VBoxContainer2/MarginContainer/BoxContainer"]
light_mask = 0
layout_mode = 2
texture = ExtResource("7_c8ya6")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="main_menu/VBoxContainer2"]
light_mask = 0
layout_mode = 2
size_flags_horizontal = 4

[node name="Play" type="TextureButton" parent="main_menu/VBoxContainer2/VBoxContainer"]
light_mask = 0
layout_mode = 2
texture_normal = ExtResource("3_s47mq")
texture_pressed = ExtResource("4_3enfj")

[node name="HBoxContainer" type="HBoxContainer" parent="main_menu/VBoxContainer2/VBoxContainer"]
light_mask = 0
layout_mode = 2
size_flags_horizontal = 4

[node name="Quit" type="TextureButton" parent="main_menu/VBoxContainer2/VBoxContainer/HBoxContainer"]
light_mask = 0
layout_mode = 2
texture_normal = ExtResource("5_3feox")
texture_pressed = ExtResource("6_ct1ws")

[node name="Options" type="TextureButton" parent="main_menu/VBoxContainer2/VBoxContainer/HBoxContainer"]
light_mask = 0
layout_mode = 2
texture_normal = ExtResource("7_f0ogo")
texture_pressed = ExtResource("8_l8o2m")

[node name="sparkle" type="Sprite2D" parent="."]
position = Vector2(1289, 206)
scale = Vector2(2, 2)
texture = ExtResource("15_3bmx6")
hframes = 5
frame = 2

[node name="MSGSparkles" type="AnimationPlayer" parent="."]
autoplay = "sparkle"
libraries = {
"": SubResource("AnimationLibrary_rewuj")
}

[node name="sparkle_markers" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="sparkle_markers"]
position = Vector2(1289, 206)

[node name="Marker2D2" type="Marker2D" parent="sparkle_markers"]
position = Vector2(870, 253)

[node name="Marker2D3" type="Marker2D" parent="sparkle_markers"]
position = Vector2(955, 147)

[node name="Marker2D4" type="Marker2D" parent="sparkle_markers"]
position = Vector2(635, 87)

[node name="Marker2D5" type="Marker2D" parent="sparkle_markers"]
position = Vector2(786, 133)

[node name="Marker2D6" type="Marker2D" parent="sparkle_markers"]
position = Vector2(1140, 173)

[node name="Marker2D7" type="Marker2D" parent="sparkle_markers"]
position = Vector2(827, 172)

[node name="Marker2D8" type="Marker2D" parent="sparkle_markers"]
position = Vector2(1020, 88)

[node name="Marker2D9" type="Marker2D" parent="sparkle_markers"]
position = Vector2(1023, 242)

[node name="Marker2D10" type="Marker2D" parent="sparkle_markers"]
position = Vector2(959, 236)

[node name="Marker2D11" type="Marker2D" parent="sparkle_markers"]
position = Vector2(1122, 238)

[node name="Marker2D12" type="Marker2D" parent="sparkle_markers"]
position = Vector2(1171, 214)

[node name="Marker2D13" type="Marker2D" parent="sparkle_markers"]
position = Vector2(1243, 151)

[node name="Marker2D14" type="Marker2D" parent="sparkle_markers"]
position = Vector2(1163, 183)

[node name="Marker2D15" type="Marker2D" parent="sparkle_markers"]
position = Vector2(1054, 158)

[node name="Marker2D16" type="Marker2D" parent="sparkle_markers"]
position = Vector2(921, 191)

[node name="Marker2D17" type="Marker2D" parent="sparkle_markers"]
position = Vector2(721, 153)

[node name="Marker2D18" type="Marker2D" parent="sparkle_markers"]
position = Vector2(904, 99)

[node name="Marker2D19" type="Marker2D" parent="sparkle_markers"]
position = Vector2(860, 110)

[node name="Marker2D20" type="Marker2D" parent="sparkle_markers"]
position = Vector2(777, 89)

[node name="Marker2D21" type="Marker2D" parent="sparkle_markers"]
position = Vector2(684, 115)

[node name="sparkle_timer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_hcmy5")

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_rkdem")

[node name="options_container" type="BoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="options" type="Control" parent="options_container"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="options_container/options"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.160784, 0.145098, 0.188235, 1)

[node name="Stars4" type="TextureRect" parent="options_container/options"]
layout_mode = 0
offset_left = 584.0
offset_right = 1197.0
offset_bottom = 1078.0
texture = ExtResource("2_76fe1")

[node name="Stars5" type="TextureRect" parent="options_container/options"]
layout_mode = 0
offset_left = 1304.0
offset_right = 1917.0
offset_bottom = 1078.0
texture = ExtResource("2_76fe1")

[node name="Stars6" type="TextureRect" parent="options_container/options"]
layout_mode = 0
offset_left = -5.0
offset_right = 608.0
offset_bottom = 1078.0
texture = ExtResource("2_76fe1")

[node name="MarginContainer" type="MarginContainer" parent="options_container/options"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
scale = Vector2(2, 2)
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 160
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 160

[node name="BoxContainer" type="BoxContainer" parent="options_container/options/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="options_container/options/MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25
alignment = 1

[node name="Volume" type="HBoxContainer" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer/Volume"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer/Volume"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="vol_label" type="Label" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer/Volume/HBoxContainer"]
layout_mode = 2
text = "100
"

[node name="HSlider" type="HSlider" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer/Volume/HBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("22_wpuw8")

[node name="Display Mode" type="HBoxContainer" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer/Display Mode"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer/Display Mode/HBoxContainer"]
layout_mode = 2
text = "Display Mode"

[node name="OptionButton" type="OptionButton" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer/Display Mode/HBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1
script = ExtResource("23_1k4qg")

[node name="VBoxContainer" type="VBoxContainer" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Back" type="Button" parent="options_container/options/MarginContainer/BoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_0m40p")
autoplay = true
bus = &"Music"

[connection signal="mouse_entered" from="main_menu/VBoxContainer2/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="main_menu/VBoxContainer2/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="main_menu/VBoxContainer2/VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="main_menu/VBoxContainer2/VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="main_menu/VBoxContainer2/VBoxContainer/HBoxContainer/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="main_menu/VBoxContainer2/VBoxContainer/HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="timeout" from="sparkle_timer" to="." method="_on_sparkle_timer_timeout"]
[connection signal="value_changed" from="options_container/options/MarginContainer/BoxContainer/VBoxContainer/Volume/HBoxContainer/HSlider" to="options_container/options/MarginContainer/BoxContainer/VBoxContainer/Volume/HBoxContainer/HSlider" method="_on_value_changed"]
[connection signal="item_selected" from="options_container/options/MarginContainer/BoxContainer/VBoxContainer/Display Mode/HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="options_container/options/MarginContainer/BoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
